# HKSS_FromGroundUp

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: context.c.428C878E9D5F5995.idx  egl_context.c.E12C32D78CEA8157.idx  glfw3.h.E0BAFA916B72F324.idx  glfw3native.h.D4A44A76AF427A52.idx  glx_context.c.94C3243001DED184.idx  init.c.CB53D51DB143BFAD.idx  input.c.8DC1171E6CB06BBD.idx  internal.h.DEC62EF975D32B4B.idx  linux_joystick.c.EC8BCFB6B3EABF5E.idx  linux_joystick.h.AA15B5143E5609FC.idx  main.c.0E6F69457F21F554.idx  mappings.h.2CD351663671C72C.idx  monitor.c.E9739F41F583BB60.idx  null_init.c.B9D4E308DBFF15DF.idx  null_joystick.c.8626144D73000DBC.idx  null_joystick.h.2232CB20AA0B48D4.idx  null_monitor.c.C5264E1BFA9C669D.idx  null_platform.h.807619122A572E59.idx  null_window.c.B68E26E245769527.idx  osmesa_context.c.57973B2F69E6EC48.idx  platform.c.40790911071485A1.idx  platform.h.9B72791895400AA5.idx  posix_module.c.8008CF39870388AE.idx  posix_poll.c.5B356C082374835C.idx  posix_poll.h.5B1D4D5114D57567.idx  posix_thread.c.9CCD35E879DCDA34.idx  posix_thread.h.3DCA8ABB84C15388.idx  posix_time.c.20D7E1FE11820A5F.idx  posix_time.h.04F937688BDA9637.idx  vulkan.c.96A72F04BBE700EB.idx  window.c.44F11449AD023E9C.idx  wl_init.c.556D4D49DFFAAEB6.idx  wl_monitor.c.9856EB06B99661E8.idx  wl_platform.h.BF4ACD7C8963D99C.idx  (+7 more)
include/: gl_wrapper.h  io.h  object.h  renderable.h  shader.h  texture.h  vertex.h
lib/: CMakeLists.txt
res/shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  gl_wrapper.c  io.c  main.c  object.c  renderable.c  shader.c  texture.c
